feat: рейтинги и события